CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(GenICamCameraAccess)

#where to find local cmake modules
FILE(TO_CMAKE_PATH "$ENV{SISODIR5}" SISODIR5)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_INSTALL_PREFIX}/cmake/modules" "${SISODIR5}/cmake/modules")

INCLUDE(SisoPlatform)
FIND_PACKAGE(FgLib5 REQUIRED)
FIND_PACKAGE(SisoDisplayLib REQUIRED)

if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

INCLUDE_DIRECTORIES(
	${FgLib5_INCLUDE_DIR}
	${SISODISPLAYLIB_INCLUDE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../../include
	${CMAKE_CURRENT_SOURCE_DIR}/../CXPCommon
)

ADD_EXECUTABLE(GenICamCameraAccess
    ${CMAKE_CURRENT_SOURCE_DIR}/../CXPCommon/CXPSDKCommon.cpp
	CXPGenicamCameraAccess.cpp)
TARGET_LINK_LIBRARIES(GenICamCameraAccess
	${FgLib5_LIBRARIES}
	${SISODISPLAYLIB_LIBRARIES}
	${SISODIR5}/lib/interface/visualc/siso_genicam.lib
)

SET_TARGET_PROPERTIES(GenICamCameraAccess PROPERTIES FOLDER "Examples/CXP")


INSTALL(TARGETS
	GenICamCameraAccess
	DESTINATION bin/examples/CXP)
